Made first task

--- a/src/Components/Blog.module.css
+++ b/src/Components/Blog.module.css
@@ -1,6 +1,9 @@
 
 .blog {
-    background-color: #EBEEF3;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
     justify-content: center;
 }
+
