--- a/src/Components/Article/Article.module.css
+++ b/src/Components/Article/Article.module.css
@@ -6,13 +6,14 @@
     background-color: #FFFF;
     width: 938px;
     height: 140px;
-    margin-bottom: 26px;
+    margin-bottom: 22px;
     border-radius: 5px;
     padding: 18px 16px;
+    box-shadow: 0px 4px 12px 0px #00000026;
 }
 
 .article:first-child {
-    margin-top: 26px;
+    margin-top: 22px;
 }
 
 .tagsAndTitle {
@@ -122,7 +123,156 @@ width: 100%;
     bottom: 0;
     right: 0;
     width: 40px;
-    height: 50%;
+    height: 30px;
     background: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 1) 100%);
     pointer-events: none;
+}
+
+@media (max-width: 700px) { 
+    .article {
+        width: 90vw;
+        max-height: 300px;
+        height: auto;
+        padding: 10px 10px;
+    }
+    .tagsAndTitle {
+        width: 100%;
+        margin-right: auto;
+    }
+    .title {
+        font-size: 14px;
+        max-height: 56px;
+        white-space: normal;
+        line-height: 18px;
+    }
+
+    .title:after{
+        top: auto;
+        bottom: 0;
+        height: 20px;
+        background: none;
+        pointer-events: none;
+    }
+    
+    .topInfo {
+        flex-direction: column;
+    }
+    
+    .tag {
+        margin-left: 6px;
+        font-size: 10px;
+    }
+
+    .tags {
+        overflow: hidden;
+        position: relative;
+    }
+
+    .tags:after{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 30px;
+        height: 18px;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 1) 100%);
+        pointer-events: none;
+    }
+
+    .tag:first-child {
+        margin-left: 0;
+        max-height: 52px;
+    }
+
+    .likes {
+        margin-right: 0;
+    }
+
+    .likes p {
+        font-size: 10px;
+        line-height: 18px;    
+    }
+
+    .author img {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .authorName {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .articleText {
+        width: 100%;
+        height: auto;
+        max-height: 110px;
+        overflow: hidden;
+    }
+
+
+    .author{
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+        margin-top: 4px;
+    }
+    .author img {
+        border-radius: 23px;
+        margin-left: 8px;
+        width: 26px;
+        height: 26px;
+    }
+
+    .dateAndName {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        width: 100%;
+    }
+    
+    .authorName {
+        font-size: 16px;
+        line-height: 16px;
+        white-space: nowrap;
+        padding-left: 6px;
+    }
+    
+    .createdAt {
+        font-size: 12px;
+        line-height: 16px;
+        text-align: start;
+        margin-right: auto;
+    }
+}
+
+@media ((min-width: 701px) and (max-width: 1000px)) { 
+    .article {
+        width: 95vw;
+        max-height: 200px;
+        height: fit-content;
+    }
+    .tagsAndTitle {
+        width: 75%;
+        margin-right: auto;
+    }
+    .topInfo {
+        width: 90vw;
+    }
+
+    .author img {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .authorName {
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .articleText {
+        width: 100%;
+        height: 45px;
+        overflow: hidden;
+    }
 }
