--- a/src/Layouts/Header.module.css
+++ b/src/Layouts/Header.module.css
@@ -9,6 +9,7 @@
     line-height: 28px;
     justify-content: space-between;
     padding: 8px 22px;
+    box-sizing: border-box;
 }
 
 .btn {
@@ -29,7 +30,7 @@
 }
 
 .title {
-    height: 56px;
+    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -38,4 +39,35 @@
     display: flex;
     align-items: center;
 }
+
+.link{
+    color:black;
+    text-decoration:none;
+  }
+
+  main {
+    min-height: calc(100vh - 80px);
+    background-color: #EBEEF3;
+  }
+
+  @media (max-width: 425px) { 
+    .header {
+        padding: 8px 12px;
+        font-size: 14px;
+        height: 60px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .btn {
+        width: 89px;
+        font-size: 14px;
+        height: 40px;
+        margin: 0;
+    }   
+
+    .title {
+        text-align: center;
+    }
+   }
 
