--- a/src/Components/Authorization/Profile.module.css
+++ b/src/Components/Authorization/Profile.module.css
@@ -7,6 +7,8 @@
     border: 1px solid #D9D9D9;
     padding: 48px 32px;
     height: fit-content;
+    box-shadow: 0px 0.61px 2.93px 0px #00000005, 0px 1.46px 7.05px 0px #00000007,0px 2.75px 13.27px 0px #00000009,0px 4.91px 23.68px 0px #0000000B,0px 9.19px 44.28px 0px #0000000D,0px 22px 106px 0px #00000012;
+
 }
 .profileContainer {
     height: calc(100vh - 80px);
