--- a/src/Components/Article/Article.module.css
+++ b/src/Components/Article/Article.module.css
@@ -51,6 +51,9 @@ width: 100%;
     margin-right: 15px;
     margin-left: 12px;
     align-items: center;
+    background-color: white;
+    border: none;
+    cursor: pointer;
 }
 
 .likes p {
