--- a/src/Components/ArticleDetails/ArticleDetails.module.css
+++ b/src/Components/ArticleDetails/ArticleDetails.module.css
@@ -40,6 +40,13 @@ width: 100%;
 .likes {
 display: flex;
 margin: 6px 15px 0 12px;
+background-color: white;
+border: none;
+cursor: pointer;
+}
+
+.likes img {
+    margin-top: 3px;
 }
 
 .likes p {
@@ -130,7 +137,6 @@ opacity: 75%;
     font-size: 14px;
     line-height: 22px;
     margin-left: 12px;
-    margin-right: 12px;
     cursor: pointer;
 }
 
@@ -197,6 +203,7 @@ opacity: 75%;
 
 .controlBtns {
     position: relative;
+    width: 170px;
 }
 
 @media (max-width: 700px) { 
@@ -281,9 +288,19 @@ opacity: 75%;
         top: -14px;
         rotate: 90deg;
     }
+    .descAndControls{
+        margin-bottom: 6px;
+    }
 
-}
+    .controlBtns {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80px;
+    }
 
-@media ((min-width: 701px) and (max-width: 1000px)) { 
-
+    .editBtn {
+        margin-top: 6px;
+        margin-left: 0;
+    }
 }
